--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ h5{
   background-image: url(main.jpg);
   background-size: cover;
   max-width: 100%;
-  height: 700px;
+  height: 100vh;
 }
 .caption{
   /* display: table;
