--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ h5{
 }
 #main-img{
   background-image: url(main.jpg);
-/*   background-size: cover; */
+  background-size: cover;
   max-width: 100%;
   height: 100vh;
 }
