--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ h5{
   font-size: 1vw;
 }
 #main-img{
-  background-image: url(main.jpg);
+  background-image: url(../img/main.jpg);
   background-size: cover;
   max-width: 100%;
   height: 100vh;
@@ -68,3 +68,131 @@ h5{
   position: relative;
   top:120px;
 }
+/* .vertical{
+  display: table-cell;
+  vertical-align: middle;
+} */
+
+.header__nav {
+  position: absolute;
+  right: 0;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  transform: translateX(100%); 
+  background-color: rgb(97, 85, 85); 
+  transition: ease .4s; 
+}
+.nav-items {
+  padding: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  list-style: none;
+}
+
+/* ナビのリンク */
+.nav-items__item a {
+  color: black;
+  width: 100%;
+  display: block;
+  text-align: center;
+  font-size: 20px;
+  margin-bottom: 24px;
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
+.nav-items__item:last-child a {
+  margin-bottom: 0;
+}
+
+.hamburger {
+  background-color: transparent; 
+  border-color: transparent; 
+  z-index: 9999;
+}
+
+.header__nav.active {
+  transform: translateX(0);
+}
+
+@media screen and (max-width: 768px) {
+  #gnav,
+  .caption{
+    display: none;
+  }
+  .header{
+    background: rgba(45,45,45, 0.8);
+  }
+  
+
+  p{
+    color: #fff;
+    font-size: 4vw;
+    font-weight: bold;
+  }
+  .openbtn{
+    /* float: right; */
+    position: fixed;
+    top:20px;
+    right:10px;
+    background:#0f1010;
+    cursor: pointer;
+      width: 50px;
+      height:50px;
+    border-radius: 5px;
+  }
+  
+  .openbtn span{
+      display: inline-block;
+      transition: all .4s;
+      position: absolute;
+      left: 14px;
+      height: 3px;
+      border-radius: 2px;
+    background: #fff;
+      width: 45%;
+    }
+  
+  .openbtn span:nth-of-type(1) {
+    top:15px;	
+  }
+  
+  .openbtn span:nth-of-type(2) {
+    top:23px;
+  }
+  
+  .openbtn span:nth-of-type(3) {
+    top:31px;
+  }
+  
+  
+  .openbtn.active span:nth-of-type(1) {
+      top: 18px;
+      left: 18px;
+      transform: translateY(6px) rotate(-45deg);
+      width: 30%;
+  }
+  
+  .openbtn.active span:nth-of-type(2) {
+    opacity: 0;
+  }
+  
+  .openbtn.active span:nth-of-type(3){
+      top: 30px;
+      left: 18px;
+      transform: translateY(-6px) rotate(45deg);
+      width: 30%;
+  }
+}
+
+@media screen and (min-width: 768px){
+  .header__nav{
+    display: none;
+  }
+}
+
