--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ h5{
   font-size: 1vw;
 }
 #main-img{
-  background-image: url(../img/main.jpg);
+  background-image: url(main.jpg);
   background-size: cover;
   max-width: 100%;
   height: 100vh;
