--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ h5{
 @media screen and (max-width: 768px) {
   #gnav,
   .caption{
-    display: none !important;
+    display: none;
   }
   .header{
     background: rgba(45,45,45, 0.8);
