--- a/style.css
+++ b/style.css
@@ -165,6 +165,10 @@ footer{
     font-size: 4vw;
     font-weight: bold;
   }
+  .position{
+  position: relative;
+  top: 40px;
+  }
   .openbtn{
     
     float: right;
