--- a/style.css
+++ b/style.css
@@ -49,7 +49,6 @@ footer{
     text-align: left;
     width: auto;
     position: relative;
-    z-index: 1001;
 }
 .half{
   width: 50%;
@@ -100,6 +99,7 @@ footer{
   /* background-color: rgb(97, 85, 85);  */
   background: linear-gradient(to right,#c70000,#d28300,#dfd000,#00873c,#005aa0,#181878,#800073);
   transition: ease .4s; 
+  z-index: 1000;
 }
 .nav-items {
   padding: 0;
@@ -169,6 +169,11 @@ footer{
   position: relative;
   top: 40px;
   }
+  .text{
+    width: 100%;
+    height: 100vh;
+    font-size: 2vw;
+  }
   .openbtn{
     
     float: right;
@@ -229,6 +234,9 @@ footer{
 
 @media screen and (min-width: 768px){
   .header__nav{
+    display: none;
+  }
+  .text{
     display: none;
   }
 }
