--- a/style.css
+++ b/style.css
@@ -170,10 +170,13 @@ footer{
   top: 40px;
   }
   .text{
-    width: 100%;
-    height: 100vh;
-    font-size: 2vw;
-    color: #fff;
+  position: absolute;
+  right: 0;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  transform: translateX(100%); 
   }
   .openbtn{
     
