--- a/style.css
+++ b/style.css
@@ -170,13 +170,9 @@ footer{
   top: 40px;
   }
   .text{
-  position: absolute;
-  right: 0;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100vh;
-  transform: translateX(100%); 
+  text-align: center;
+  positon: relative;
+  top: 50%;
   }
   .openbtn{
     
