--- a/style.css
+++ b/style.css
@@ -3,11 +3,15 @@
   margin: 0;
   padding: 0;
 }
-#main-img{
+html,
+body{
+	height: 100%;
   overflow-x: hidden;
-  overflow-y: hidden;
-  position: relative;
 }
+/* #main-img{
+  overflow-x: hidden;
+  position: relative;
+} */
 p{
   color: #fff;
   font-size: 2vw;
@@ -48,7 +52,6 @@ footer{
     padding: 0 10px;
     text-align: left;
     width: auto;
-/*     position: relative; */
 }
 .half{
   width: 50%;
@@ -71,17 +74,30 @@ footer{
   text-decoration: none;
   font-size: 1vw;
 }
-#main-img{
-  background-image: url(main_img.jpg);
+#particles-js{ 
+	position:fixed;
+	z-index:-1;
+	width: 100%;
+	height: 100vh;
+  background: linear-gradient(0deg, #000 0%, #043489 50%, #000 100%);
+}
+#background{
+	position: relative;
+	z-index: 1;
+	width:100%;
+	height:100%;
+}
+/* #main-img{
+  background-image: url(../img/main_img.jpg);
   background-size: cover;
   max-width: 100%;
   height: 100vh;
-}
+} */
 .caption{
   /* display: table;
   width: 100%; */
   position: relative;
-  top:120px;
+  top:150px;
 }
 /* .vertical{
   display: table-cell;
@@ -97,7 +113,10 @@ footer{
   height: 100vh;
   transform: translateX(100%); 
   /* background-color: rgb(97, 85, 85);  */
-  background: linear-gradient(to right,#c70000,#d28300,#dfd000,#00873c,#005aa0,#181878,#800073);
+  /* background: linear-gradient(to right,#c70000,#d28300,#dfd000,#00873c,#005aa0,#181878,#800073); */
+  /* background: linear-gradient(0deg, #000 0%, #043489 50%, #000 100%); */
+  background: -webkit-gradient(linear, left top, right top, from(#000), color-stop(50%, #001e4e), to(#000));
+  background-color:#020E34;/*背景色*/
   transition: ease .4s; 
   z-index: 1000;
 }
@@ -136,14 +155,19 @@ footer{
 .header__nav.active{
   transform: translateX(0);
 }
-#page-top{
+.page-top{
   position: fixed;
   bottom: 15px;
-  right: 40px;
+  right: 200px;
 }
 .copyright{
   font-size: 0.6vw;
 }
+/* 別のコンテンツを追加 */
+/* .container{
+  background: #fff;
+  height: 500px;
+} */
 
 @media screen and (max-width: 768px) {
   #gnav,
@@ -152,45 +176,49 @@ footer{
     display: none;
   }
   .header{
-    background: rgba(45,45,45, 0.2);
+    background: rgba(45,45,45, 0.3);
   }
   /* body{
     overflow-x: hidden !important;
   } */
   .copyright{
-    font-size: 1.5vw;
+    font-size: 1vw;
   }
   p{
     color: #fff;
     font-size: 4vw;
     font-weight: bold;
   }
+  
   .position{
-  position: relative;
-  top: 40px;
+    position: relative;
+    top: 40px;
   }
   .text{
-/*   display: grid;
-  place-items: center;
-  height: 100vh;
-  height: 150px; */
-  text-align: center;
-  line-height: 60vh;
-  color: #fff;
-  font-size: 6vw;
-  font-weight: bold;
-  z-index: 1;
+    display: grid;
+    place-items: center;
+    height: 70vh;
+    /* height: 150px; */
+    /* text-align: center;
+    line-height: 100vh; */
+    color: #fff;
+    font-size: 6vw;
+    font-weight: bold;
+    z-index: 1;
   }
+  .page-top{
+    right: 40px;
+  }
+
   .openbtn{
-    
     float: right;
     position: relative;
-    top:20px;
-    right:10px;
+    top:30px;
+    right:30px;
     background:#0f1010;
     cursor: pointer;
-      width: 50px;
-      height:50px;
+    width: 50px;
+    height:50px;
     border-radius: 5px;
   }
   
