--- a/style.css
+++ b/style.css
@@ -142,11 +142,11 @@ footer{
   width: 100%;
   display: block;
   text-align: center;
-  font-size: 20px;
-  margin-bottom: 24px;
+  font-size: 15px;
+  padding: 15px 0 15px;
   text-decoration: none;
   color: rgb(255, 255, 255);
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+/*   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; */
 }
 
 .nav-items__item:last-child a {
@@ -206,11 +206,13 @@ footer{
     position: relative;
     left: 2px;
     bottom: 13px;
+    z-index: 9999;
   }
  .logo_name{
     white-space: nowrap;
     position: relative;
     top: 5px;
+    z-index: 9999;
   }
   .text{
     display: grid;
