--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 html,
 body{
-	height: 100%;
+  height: 100%;
   overflow-x: hidden;
 }
 /* #main-img{
@@ -112,6 +112,8 @@ footer{
 } */
 
 .header__nav {
+  display: flex;
+  justify-content: center;
   position: absolute;
   right: 0;
   left: 0;
@@ -134,6 +136,7 @@ footer{
   left: 50%;
   transform: translate(-50%,-50%);
   list-style: none;
+  width: 80%;
 }
 
 /* ナビのリンク */
@@ -141,12 +144,13 @@ footer{
   color: black;
   width: 100%;
   display: block;
-  text-align: center;
+  margin-left: 10px;
+  /* text-align: center; */
   font-size: 15px;
   padding: 15px 0 15px;
   text-decoration: none;
   color: rgb(255, 255, 255);
-/*   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; */
+  /* font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; */
 }
 
 .nav-items__item:last-child a {
@@ -176,6 +180,51 @@ footer{
   height: 500px;
 } */
 
+/* フォーム部分 */
+form {
+  display: flex;
+  justify-content: center;
+  max-width: 440px;
+  width: 80%;
+  height: 40px;
+  padding: 0 10px 0;
+  position: relative;
+  top: 120px;
+  /* left: 20px; */
+}
+form input {
+  border: none;
+  padding: 0.9em 1em;
+  border-radius: 10px;
+  font-size: 14px;
+  width: 100%;
+}
+form button {
+  position: absolute;
+  top: 50%;
+  right: 55px;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+button {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  padding: 0;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+form button img{
+  position: relative;
+  left: 20px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  vertical-align: bottom;
+}
+
 @media screen and (max-width: 768px) {
   #gnav,
   .caption
@@ -189,14 +238,14 @@ footer{
     overflow-x: hidden !important;
   } */
   .copyright{
-    font-size: 3vw;
+    font-size: 1vw;
   }
   p{
     color: #fff;
     font-size: 4vw;
     font-weight: bold;
   }
-  
+  /* ヘッダー部分 */
   .position{
     position: relative;
     top: 40px;
@@ -204,37 +253,47 @@ footer{
   .logo{
     float: left;
     position: relative;
-    left: 2px;
+    left: 5px;
     bottom: 13px;
     z-index: 9999;
   }
- .logo_name{
+  .logo_name{
     white-space: nowrap;
     position: relative;
     top: 5px;
+    left: 5px;
     z-index: 9999;
   }
+  /* モバイルメニュー画面 */
+  .nav-items__item{
+    display: flex;
+    justify-content: center;
+    border-bottom: solid 0.7px #fff;
+    width: 100%;
+    
+  }
+  /* メイン画面部分 */
   .text{
     display: grid;
     place-items: center;
-    height: 60vh;
+    height: 70vh;
     /* height: 150px; */
     /* text-align: center;
     line-height: 100vh; */
     color: #fff;
-    font-size: 7vw;
+    font-size: 6vw;
     font-weight: bold;
     z-index: 1;
   }
   .page-top{
-    right: 40px;
+    right: 30px;
   }
 
   .openbtn{
     float: right;
     position: relative;
     top:30px;
-    right:30px;
+    right:20px;
     background:#0f1010;
     cursor: pointer;
     width: 50px;
@@ -294,6 +353,7 @@ footer{
   .text{
     display: none;
   }
+  #searchform{
+    display: none;
+  }
 }
-
-
