--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ footer{
   background: rgba(45,45,45, 0.5);
   position: absolute;
   bottom: 0;
-  z-index: -1;
+/*   z-index: -1; */
 }
 .header{
   position: sticky;
