--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ footer{
 
 /*ハンバーガーメニュー部分*/
 .header__nav {
-  display: flex;
+  display: fixed;
   justify-content: center;
   position: absolute;
   right: 0;
