--- a/style.css
+++ b/style.css
@@ -114,14 +114,14 @@ footer{
 
 /*ハンバーガーメニュー部分*/
 .header__nav {
-  display: block;
+  display: flex;
   justify-content: center;
   position: absolute;
   right: 0;
   left: 0;
   top: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   transform: translateX(100%); 
   /* background-color: rgb(97, 85, 85);  */
   /* background: linear-gradient(to right,#c70000,#d28300,#dfd000,#00873c,#005aa0,#181878,#800073); */
