--- a/style.css
+++ b/style.css
@@ -237,7 +237,7 @@ form button img{
   }
   .header{
     background: rgba(45,45,45, 0.3);
-    height: 50px;
+    height: 60px;
   }
   /* body{
     overflow-x: hidden !important;
@@ -258,7 +258,7 @@ form button img{
     float: left;
     position: relative;
     left: 5px;
-/*     bottom: 13px; */
+    bottom: 13px;
     z-index: 9999;
   }
   .logo_name{
