--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ footer{
   width: 100%;
   height: 70px;
   /* background: linear-gradient(to right,#590590,#ffffff); */
-  background: rgba(45,45,45, 0.5);
+/*   background: rgba(45,45,45, 0.5); */
   position: absolute;
   bottom: 0;
 /*   z-index: -1; */
@@ -42,7 +42,7 @@ footer{
   position: sticky;
   top:0;
   height: 100px;
-  background: rgba(45,45,45, 0.3);
+/*   background: rgba(45,45,45, 0.3); */
 }
 .wrapper{
   display: block;
